# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.751 2008/09/08 23:28:33 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.3 (2008/??/??)
 - (2008/09/08) Fixed bug# 3158 - Ticket has a "pending" state --> the
    escalation time is not set out.
 - (2008/09/08) Fixed bug# 3266 - backup.pl calls "mysqldump5" not "mysqldump".
 - (2008/09/08) Fixed bug# 3251 - Error retrieving pop3s email from gmail
    or MS Exchange.
 - (2008/09/08) Fixed bug# 3247 - GenericAgent is running also without time
    settings.
 - (2008/09/08) Fixed bug# 3261 - Escalation also for ro tickets (normally just
    rw tickets).
 - (2008/08/30) Fixed bug# 2862 - Wrong summary in GenericAgent webinterface
    after adding a new job. Max. shown 10,000 affected tickets.
 - (2008/08/30) Fixed bug# 3053 - AJAX functionality without cookies is not
    working.
 - (2008/08/29) Fixed bug# 3152 - German wording in link tables within english
    environment.
 - (2008/08/21) Fixed bug# 3227 - Link delete doesn't work if the key includes
    double colons.

2.3.2 (2008/08/25)
 - (2008/08/21) Fixed bug# 3076 - Ticket Eskalation of update time is not
    working correctly.
 - (2008/08/21) Fixed bug# 3064 - Java Script Error if I use
    "Internet Explorer 7".
 - (2008/08/21) Fixed bug# 3198 - ACL is not working for services in Customer
    Panel for creating new tickets.
 - (2008/08/21) Fixed bug# 3214 - PostMasterFilter - Its not possible to
    filter for "Return-Path".
 - (2008/08/21) Fixed bug# 3216 - CustomerTicketSearch returns links to
    internal articles.
 - (2008/08/21) Fixed bug# 3219 - Bogus 7bit check in the file cache backend.
 - (2008/08/21) Implemented display of ticket search profiles in Agent